# profam

./: .dockerignore  .gitignore  Dockerfile  README.md  commit_hash2.txt  evaluate_proteingym.sh  launch.sh  pf_11_conda_env.yml  profiling_results.txt  proteingym_results_20250719_190623.csv  pyproject.toml  requirements-cpu.txt  requirements.dm.txt  requirements.kaspian.txt  requirements.txt  setup.py  summary.txt  test_coverage_similarity_loading.py  train_example.py  train_example_openfold.py  validate_cath_split_parquets.py
configs/: eval.yaml  sampling_eval.yaml  scoring_eval.yaml  train.yaml  validate.yaml
data/: 4_1_1_39_cluster_aln.filtered.fasta  funfams_ec_pure.tsv  openfold_uniclust30_ids.txt  selected_heldout_families_info.csv
data_creation/: create_arrow_dataset.py  create_ec_fastas.py  create_seq_db.py  ec.py  make_prot_family_db.py  make_uniref100_db.py  msa_similarity_and_coverage.py  parquet_remove_file_name.py  rename_cols_in_parquet_file.py
data_creation_scripts/: align_gym_wt_to_gym_msas.py  apply_split_to_parquets.py  array_count_all_doc_overlaps_w_pfam_val_test.py  array_job_split_pfam.py  assign_likelihoods_to_msa_seqs.py  build_cluster_db.py  build_cluster_mapping_db.py  cath.py  clean_uniref90_parquets.py  cluster_proteingym_assays.py  cluster_within_familes.py  cluster_within_families.py  combine_parquet_files_in_directory.py  convert_datasets_to_text.py  convert_datasets_to_text_parallel.py  count_all_doc_overlaps_w_pfam_val_test.py  count_all_doc_overlaps_w_pfam_val_test_v1.py  count_clusters.py  create_datasets_for_testing.py  create_ec_fastas.py  create_ec_validation_datasets.py  create_fam_classification_parquets.py  create_foldseek.py  create_foldseek_clusters_of_clusters.py  create_foldseek_context_for_gym_dataset.py  create_foldseek_representatives.py  create_foldseek_struct.py  create_foldseek_struct_with_af50.py  create_foldseek_val_test_split_json.py  create_foldseek_with_af50.py  create_funfam_parquets.py  create_go_mf_docs.py  create_go_mf_parquets.py  create_go_term_parquets.py  create_lmdb_from_fasta.py  create_parquet_dataset.py  create_parquets_from_fasta.py  create_pfam_eval_fastas.py  create_seq_db.py  create_ted_cath_code_to_up_id.py  (+33 more)
notebooks/: BatchInspect.ipynb  CATHBatchInspect.ipynb  InteractiveValidationBLAT.ipynb  InverseFolding.ipynb  InverseFoldingScoring.ipynb  PipelineExplorer.ipynb  SIFTSUniprotToPDB.ipynb  protfam_tokenizer.json  train_tokenizer.ipynb
notes/: distributed_training.md  efficient_data_loading.md  iterable_datasets.md  losses.md
plans/: in_context_supervised_fitness.md
profam/: __init__.py  api.py  checkpoint.py  constants.py  download_checkpoint.py  model_summary.py  scoring.py  train.py
scripts/: analyse_pfam_val_test_overlaps.py  boltz2_evaluation.py  check_all_uniref100_in_seq_db.py  check_foldseek_parquet_members.py  check_interpro_db.py  check_parquets.py  check_parquets.sh  count_families_in_datasets.py  directory_walk_clifford.sh  drop_redundant_tables.py  evaluate_covariance.py  evaluate_esmfold_from_fastas.py  evaluate_generated_sequences copy.py  evaluate_generated_sequences.py  evaluate_poet.py  filter_poet_msas.py  generate_sequences.py  get_accessions.py  hhfilter_gym.sh  iterable_dataset_example_data.py  iterable_dataset_example_data_test.py  mafft_msa_2_a3m.py  make_gym_data_files.py  map_pfam_parquet_contents.py  model_summary.py  override_optimizer.sh  pfenv.source  poet_plots.py  potts_model_evaluation.py  refactor_missing_seqs.py  run_alphafold.py  sample.py  sample_sequences_from_checkpoint_model.py  score_sequences.py  sequence_identity.py  shuffle_pfam_parquets.py  summarise_indexed_dataset.py  sync_runs_to_wandb.py  sync_wandb.sh  test_iterable_dataset.py  (+4 more)
src/: constants.py  run_evaluation.py  run_sampling_evaluation.py  train.py
submit_scripts/: apply_split_parallel_array.sh  apply_split_tmp.sh  apply_split_to_parquets.qsub.sh  array_count_all_doc_overlaps_w_pfam.qsub.sh  array_job_split_pfam.qsub.sh  array_run_alphafold-2.3.1.sh  array_run_alphafold-2.3.1_fast.sh  array_run_alphafold_fast.qsub.sh  beta_lactamase_sampling_all_seqs.qsub.sh  build_cluster_db.qsub.sh  build_foldseek_job_files.qsub.sh  casp16_synthetic_msa.qsub.sh  chain_submit_ted.sh  (+154 more)
(+2769 files in other folders)
