[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "profam"
version = "0.1.8"
description = "Protein family language models"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["protein-language-model", "protein-design", "bioinformatics", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "torch>=2.1",
    "lightning>=2.1",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "transformers>=4.40,<5",
    "tokenizers>=0.19",
    "accelerate>=0.30",
    "biopython>=1.80",
    "biotite>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "numba>=0.58",
    "matplotlib>=3.7",
    "python-dotenv>=1.0",
    "huggingface-hub>=0.23",
    "rich>=13.0",
    "wandb>=0.16",
    "safetensors>=0.4",
    "tqdm>=4.65",
    "torchmetrics>=1.0",
]

[project.optional-dependencies]
flash-attn = ["flash-attn>=2.5"]

[dependency-groups]
dev = ["pytest>=9.0", "pre-commit>=4.0", "setuptools<80"]

[project.scripts]
profam = "profam.cli.main:app"
profam-download-checkpoint = "profam.download_checkpoint:main"
profam-generate-sequences = "profam.cli.generate_sequences:main"
profam-score-sequences = "profam.cli.score_sequences:main"

[project.urls]
Homepage = "https://github.com/alex-hh/profam"
Repository = "https://github.com/alex-hh/profam"
Issues = "https://github.com/alex-hh/profam/issues"

[tool.hatch.build.targets.wheel]
packages = ["profam"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
  "example: mark test as an example test",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
